--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 p {
-    border: 2px dashed black;
+    /* border: 2px dashed black; */
     padding-top: 10px;
     margin-bottom: 10px;
 }
